--- a/src/main/resources/static/CSS/style.css
+++ b/src/main/resources/static/CSS/style.css
@@ -48,7 +48,7 @@ body{
 }
 
 .footer{
-    background-color: springgreen;
+    background-color: khaki;
     height: 20px;
     position: fixed;
     width: 100%;
