--- a/src/main/resources/templates/layout/plantilla.html
+++ b/src/main/resources/templates/layout/plantilla.html
@@ -1,26 +1,15 @@
 <!DOCTYPE html>
-<html> xmlns ="http://www.w3.org/1999/xhtml"
-    xmlns:th="http://www.thymeleaf.org">
-
-
-
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
     <head th:fragment="head">
         <meta charset="UTF-8"/>
         <title>TechShop</title>
-        <link th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" rel="stylesheet"/>
-
-        <link th:href="@{/webjars/font-awesome/css/all.css}" rel="stylesheet"/>
-
+        <link rel="stylesheet" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}"/>
+        <link rel="stylesheet" th:href="@{/webjars/font-awesome/css/all.css}"/>
         <script th:src="@{/webjars/jquery/jquery.min.js}"></script>
-
         <script th:src="@{/webjars/popper.js/umd/popper.min.js}"></script>
-
         <script th:src="@{/webjars/bootstrap/js/bootstrap.min.js}"></script>
-
-
-
     </head>
-
     <body>
 
         <header th:fragment="header" class="header">
@@ -64,19 +53,13 @@
         </header>
 
         <footer th:fragment="footer" class="bg-info text-white mt-5 p-2">
-
-            <div class ="container">
+            <div class="container">
                 <div class="col">
-                    <p class="lead texto-center">
-                        &COPY;[[#{plantilla.derechos}]]
+                    <p class="lead text-center" >
+                        &COPY; [[#{plantilla.derechos}]]
                     </p>
-
                 </div>
-
             </div>
-
         </footer>
     </body>
-</body>
-
 </html>
