--- a/src/main/resources/templates/pruebas/fragmentos.html
+++ b/src/main/resources/templates/pruebas/fragmentos.html
@@ -80,5 +80,64 @@
                 </div>
             </div>
         </section>
+        <!-- 3 Sección para crear los filtros -->
+        <section th:fragment="filtros" class="bg-light">
+            <div class="row py-2 ml-5">
+                <div class="col-md-3">
+                    <form method="POST" th:action="@{/pruebas/query1}" 
+                          class="was-validated">
+                        <div class="card">                            
+                            <div class="card-body">
+                                <div class="mb-3">
+                                    <label for="precioInf">[[#{pruebas.precio.inferior}]]</label>
+                                    <input type="number" class="form-control" 
+                                           th:value="${precioInf}"
+                                           th:name="precioInf" required="true"/>
+                                </div>
+                                <div class="mb-3">
+                                    <label for="precioSup">[[#{pruebas.precio.superior}]]</label>
+                                    <input type="number" class="form-control" 
+                                           th:value="${precioSup}"
+                                           th:name="precioSup" required="true"/>
+                                </div>
+                            </div>
+                            <div class="card-footer text-center">
+                                <button type="submit" class="btn btn-success">
+                                    <i class="fas fa-check"></i> [[#{pruebas.jpql}]]
+                                </button>
+                            </div>
+                        </div>
+                    </form>
+                </div>   
+            </div>
+        </section>
+
+
+        <div class="col-md-3">
+            <form method="POST" th:action="@{/pruebas/query1}" 
+                  class="was-validated">
+                <div class="card">                            
+                    <div class="card-body">
+                        <div class="mb-3">
+                            <label for="precioInf">[[#{pruebas.precio.inferior}]]</label>
+                            <input type="number" class="form-control" 
+                                   th:value="${precioInf}"
+                                   th:name="precioInf" required="true"/>
+                        </div>
+                        <div class="mb-3">
+                            <label for="precioSup">[[#{pruebas.precio.superior}]]</label>
+                            <input type="number" class="form-control" 
+                                   th:value="${precioSup}"
+                                   th:name="precioSup" required="true"/>
+                        </div>
+                    </div>
+                    <div class="card-footer text-center">
+                        <button type="submit" class="btn btn-success">
+                            <i class="fas fa-check"></i> [[#{pruebas.jpql}]]
+                        </button>
+                    </div>
+                </div>
+            </form>
+        </div>   
     </body>
 </html>
